fixed uneven footer

--- a/src/components/app/footer/footer.module.scss
+++ b/src/components/app/footer/footer.module.scss
@@ -20,7 +20,7 @@
 
     .centre {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
 
         row-gap: 2ex;
         column-gap: 2ch;
